@@ -584,6 +584,7 @@ pages for purposes of page relevancy ranking.
 * (bug 2075) Corrected namespace definitions in Tamil localization
 * (bug 1692) Fix margin on unwatch tab
 * Avoid overwriting shared image metadata cache with bogus encoding conversions
+* Fix reporting of minor edits in Special:Export output
 
 
 === Caveats ===
